Add abstract object

--- a/visitor/Makefile
+++ b/visitor/Makefile
@@ -1,22 +1,27 @@
+SOURCES = src/*.c \
+          src/*.h
+
 CC = gcc
-
-CFLAGS = -g -Wall
-
-SOURCES = *.c \
+CFLAGS = -g -Wall -lm
+# No fancy extensions here!
+CFLAGS += -Wpedantic
 
 TARGET = visitor.out
 
-INCLUDE = *.h
+libabstract.a : lib/visitor.o lib/object.o
+	ar rcs $@ $^
+	ranlib $@
 
 tags:
+	rm -rf ./tags
 	ctags -R .
 
-
-all: $(TARGET)
-	gcc $(CFLAGS) $(SOURCES) $(INCLUDE) -o $(TARGET)
-
 $(TARGET): $(SOURCES)
-	$(CC) $(CFLAGS) -o $(TARGET) $(SOURCES)
+	$(CC) $(CFLAGS) -o $@ $^ libabstract.a -Ilib
+
+all: libabstract.a $(TARGET)
 
 clean:
-	rm *.o *.out
+	rm -rf ./*.o ./*.out ./tags ./*.a
+
+.PHONY: clean tags
