--- a/template/Makefile
+++ b/template/Makefile
@@ -1,25 +1,21 @@
-SOURCES = src/*.c \
-          src/*.h
+SOURCES = *.c \
+          *.h
 
 CC = gcc
 CFLAGS = -g -Wall
 # No fancy extensions here!
 CFLAGS += -Wpedantic
 
-TARGET = visitor.out
-
-libabstract.a : lib/visitor.o lib/object.o
-	ar rcs $@ $^
-	ranlib $@
+TARGET = template.out
 
 tags:
 	rm -rf ./tags
 	ctags -R . --tag-relative=yes
 
 $(TARGET): $(SOURCES)
-	$(CC) $(CFLAGS) -o $@ $^ libabstract.a -Ilib
+	$(CC) $(CFLAGS) -o $@ $^
 
-all: libabstract.a $(TARGET)
+all: $(TARGET)
 
 clean:
 	rm -rf ./*.o ./*.out ./tags ./*.a
